CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-13 12:50:57
+lastsearch = 2024-07-13 16:44:39
 
 [shopee.vn]
 match = -28.0%%
@@ -27,9 +27,9 @@ title = Xin chào, tôi ở Đài Loan | Kaohsiung
 url = https://www.facebook.com/toiodailoan/
 
 [vi.wikipedia.org]
-match = 12.5%%
-title = Lịch sử Đài Loan
-url = https://vi.wikipedia.org/wiki/Lịch_sử_Đài_Loan
+match = -4.0%%
+title = Đài Loan – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.voatiengviet.com]
 match = -72.0%%
@@ -112,9 +112,9 @@ title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan l
 url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [trithucvn.co]
-match = -68.0%%
-title = Thủ tướng Hungary Orban gặp cựu Tổng thống Mỹ Trump ...
-url = https://trithucvn.co/the-gioi/thu-tuong-hungary-orban-gap-cuu-tong-thong-my-trump-de-thao-luan-ve-su-menh-hoa-binh.html
+match = -88.0%%
+title = Đài Loan cảnh giác với 'làn sóng' thử tên lửa tại miền bắc ...
+url = https://trithucvn.co/the-gioi/dai-loan-canh-giac-voi-lan-song-thu-ten-lua-tai-mien-bac-trung-quoc.html
 
 [www.klook.com]
 match = -56.0%%
@@ -147,9 +147,9 @@ title = Secured Home of canbangdongclc.com
 url = https://canbangdongclc.com/
 
 [tuoitre.vn]
-match = -60.0%%
-title = Động đất mạnh 7,2 độ ở Đài Loan, 9 người chết và 821 ...
-url = https://tuoitre.vn/dai-loan-nhat-ban-philippines-phat-canh-bao-sau-dong-dat-20240403082258882.htm
+match = -72.0%%
+title = Đài Loan theo dõi sát đợt thử tên lửa mới của Trung Quốc
+url = https://tuoitre.vn/dai-loan-theo-doi-sat-dot-thu-ten-lua-moi-cua-trung-quoc-20240713134043306.htm
 
 [baothuathienhue.vn]
 match = -72.0%%
