--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-13 16:14:49
+lastsearch = 2024-07-13 16:51:15
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -107,9 +107,9 @@ title = Tăng "vọt" nhờ thực đơn tăng chiều cao ở tuổi 14 dễ ki
 url = https://midumenaq7.com/thuc-pham-tang-chieu-cao-tuoi-14-n1734.html
 
 [www.facebook.com]
-match = -168.8%%
-title = 14-9-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc ...
-url = https://www.facebook.com/soctrangtv/videos/14-9-2022-thời-sự-chiều-18h30/628724795320143/
+match = -187.5%%
+title = Việc Tìm Người/ Người Tìm Việc tại San Jose và vùng bay
+url = https://www.facebook.com/groups/188379676145905/
 
 [kenh14.vn]
 match = -193.8%%
@@ -340,4 +340,9 @@ url = https://partner.hdbank.com.vn/Default.aspx?ArticleId=b9b9f686-49e9-46bc-b4
 match = -187.5%%
 title = Herbs and Spices (Ginger, Turmeric, Cinnamon, Anise,.)
 url = https://www.yellowpages.com.vn/categories/303355/spices-herbs-(ginger-turmeric-cinnamon-anise,.)-manufacturers-and-exporters.html?page=14
+
+[caobangtv.vn]
+match = -50.0%%
+title = Dự báo thời tiết đêm 13, ngày 14
+url = http://caobangtv.vn/tin-tuc-n74908/du-bao-thoi-tiet-dem-13-ngay-14.html
 
