--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-13 04:30:06
+lastsearch = 2024-07-13 16:48:51
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -244,7 +244,7 @@ url = https://baosonla.org.vn/the-thao/phong-trao-the-duc-the-thao-o-sop-cop-LcJ
 [books.google.com]
 match = -268.8%%
 title = Phật giáo Nam tông cái vùng Nam bộ - Page 112 - Google Books Result
-url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HvygU1aO&sig=ACfU3U0Ek5nUQYuFb9wi24JVDGiBjfrqFQ&hl=en&sa=X&ved=2ahUKEwjWn_7Lr6KHAxWjEVkFHWtXDncQ6AF6BAgdEAM
+url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HvylR14N&sig=ACfU3U2mVWTx6dj7m_iHJ40HC2YJa_Ys5g&hl=en&sa=X&ved=2ahUKEwib26C63qOHAxXwEFkFHZ7AAQYQ6AF6BAgYEAM
 
 [daihoc.fpt.edu.vn]
 match = -162.5%%
@@ -630,4 +630,9 @@ url = https://thanhhoa.gov.vn/
 match = -200.0%%
 title = Lực lượng ANTT ở cơ sở xã Vũ Bản, huyện Bình Lục (Hà ...
 url = https://congan.hanam.gov.vn/index.php/vi/news/tin-hoat-dong/luc-luong-antt-o-co-so-xa-vu-ban-huyen-binh-luc-ha-nam-giup-chau-be-di-lac-tro-ve-gia-dinh-2622.html
+
+[lacduong.lamdong.gov.vn]
+match = 33.3%%
+title = Huyện Lạc Dương
+url = https://lacduong.lamdong.gov.vn/
 
