--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-13 12:17:51
+lastsearch = 2024-07-13 16:50:10
 
 [demxanh.com]
 match = -41.2%%
@@ -12,9 +12,9 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -141.2%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html?spid=38118691
+match = -105.9%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=160905191/
 
 [www.lazada.vn]
 match = -135.3%%
@@ -22,9 +22,9 @@ title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
 url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
 
 [thegioidemviet.vn]
-match = -182.4%%
-title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
-url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
+match = -129.4%%
+title = Thảm trải sàn Bali M6 hàng cao cấp, mẫu mã đa dạng
+url = https://thegioidemviet.vn/tham-trai-san-bali-m6/
 
 [sammas.vn]
 match = -111.8%%
