--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-13 13:37:25
+lastsearch = 2024-07-13 17:17:24
 
 [tiki.vn]
 match = 16.0%%
@@ -47,9 +47,9 @@ title = Quốc triều chính biên toát yếu
 url = https://books.google.com/books?id=Mm3W8DYq3t4C&pg=PA195&lpg=PA195&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Z0gCbRQ2U-&sig=ACfU3U1dZob24BP9TQBlfLwV2RbJ-X7lNw&hl=en&sa=X&ved=2ahUKEwjR3NfujqKHAxWIEVkFHafxDpwQ6AF6BAgVEAM
 
 [www.skyscanner.com.vn]
-match = -12.0%%
-title = Vé máy bay giá rẻ đi Đài Loan - Skyscanner
-url = https://www.skyscanner.com.vn/flights-to/tw/cheap-flights-to-đai-loan.html
+match = -48.0%%
+title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Hà Nội
+url = https://www.skyscanner.com.vn/routes/tpe/han/taipei-taiwan-taoyuan-to-ha-noi.html
 
 [www.bestprice.vn]
 match = -64.0%%
