--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-07-13 14:47:36
+lastsearch = 2024-07-13 17:16:51
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = -21.4%%
-title = [ Ảnh thật 100%%] Chiếu trúc Quế Lâm loại 1 cao cấp 2 mắt ...
-url = https://shopee.vn/-Ảnh-thật-100-Chiếu-trúc-Quế-Lâm-loại-1-cao-cấp-2-mắt-ngọc-i.19058947.7184515371
+match = 14.3%%
+title = CHIẾU TRÚC QUẾ LÂM MẮT NGỌC KHÔNG HOA VĂN, ...
+url = https://shopee.vn/CHIẾU-TRÚC-QUẾ-LÂM-MẮT-NGỌC-KHÔNG-HOA-VĂN-HÀNG-LOẠI-1-BÓNG-ĐẸP-i.444652147.14296554126
 
 [demxanh.com]
 match = -25.0%%
