--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-13 16:12:01
+lastsearch = 2024-07-13 17:14:12
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -62,9 +62,9 @@ title = PYEODA
 url = http://noithatbichthuy.com/pyeoda
 
 [changagoidemphuongbac.com]
-match = -85.0%%
-title = Chăn sơ đậu nành Pyeoda - Chăn ga gối đệm Phương Bắc
-url = https://changagoidemphuongbac.com/chan-so-dau-nanh-pyeoda/
+match = -20.0%%
+title = Bộ ga gối chun chần HQ Pyeoda
+url = https://changagoidemphuongbac.com/bo-ga-goi-chun-chan-hq-pyeoda/
 
 [thuongtruong.com.vn]
 match = -125.0%%
