--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-13 12:37:29
+lastsearch = 2024-07-13 17:13:21
 
 [shopee.vn]
 match = -146.7%%
@@ -12,9 +12,9 @@ title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ thảm trải ghế
 
 [ghedagiago.com]
-match = -146.7%%
-title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
-url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
+match = -166.7%%
+title = Bảng Giá Bàn Ghế Đá Năm 2024 [Cập Nhật 1 Giờ Trước]
+url = https://ghedagiago.com/bang-gia-bo-ban-ghe-da-san-vuon/
 
 [ghedatruongan.com]
 match = -86.7%%
@@ -22,9 +22,9 @@ title = BẢNG GIÁ BÀN GHẾ ĐÁ TRƯỜNG AN NĂM 2024
 url = https://ghedatruongan.com/ban-ghe-da-gia-bao-nhieu/
 
 [ghedaviet.com]
-match = -93.3%%
-title = Ghế đá băng dài GDCV-59 - 0933832979
-url = https://ghedaviet.com/ghe-da-bang-dai-gdcv-59
+match = -100.0%%
+title = Bàn ghế đá dài Bazan GDBZ-06 - 0933832979
+url = https://ghedaviet.com/ban-ghe-da-dai-bazan-gdbz-06
 
 [anmoc.vn]
 match = -173.3%%
@@ -37,9 +37,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [bangheda.info]
-match = -140.0%%
-title = BÀN GHẾ ĐÁ | XƯỞNG SẢN XUẤT GHẾ ĐÁ THÀNH MỸ ...
-url = https://bangheda.info/
+match = -20.0%%
+title = ghế đá mài giá rẻ [Ngắn 1m]
+url = https://bangheda.info/ghe-da-dai-gia-re/
 
 [banghedagiasi.com]
 match = -93.3%%
@@ -80,4 +80,14 @@ url = https://nongtraida.com/san-pham/mau-ban-ghe-da-cam-thach-da-bao-do-nguyen-
 match = -46.7%%
 title = Trang chủ - XƯỞNG GHẾ ĐÁ TÂM DŨNG
 url = https://ghedasontay.com/
+
+[thamtraisangiadinh.com]
+match = -106.7%%
+title = Thảm Trải Ghế Cắt Theo Kích Thước Ghế TG304
+url = https://thamtraisangiadinh.com/tham-trai-ghe-cat-theo-kich-thuoc-ghe-tg304
+
+[luxcasa.vn]
+match = -180.0%%
+title = Tiết Lộ 99+ Mẫu Ghế Sofa Da Cao Cấp Hot Nhất Năm 2024
+url = https://luxcasa.vn/ghe-sofa-da/
 
