--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-13 16:32:56
+lastsearch = 2024-07-13 17:13:41
 
 [demxanh.com]
 match = -4.5%%
@@ -52,8 +52,8 @@ title = Thảm Trải Sofa Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-sofa/
 
 [tiki.vn]
-match = -86.4%%
-title = Thảm trải sàn phòng khách 2m x 2m hàng chính hãng ...
+match = -90.9%%
+title = Thảm trải sàn phòng khách 2m x 2m hàng chính hãng, ...
 url = https://tiki.vn/search?q=thảm trải sàn phòng khách 2m x 2m
 
 [cafeland.vn]
