--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-13 17:16:17
+lastsearch = 2024-07-13 17:38:46
 
 [shopee.vn]
 match = -78.3%%
@@ -32,9 +32,9 @@ title = Xưởng chiếu cây cao bằng | By Cơ sở SX chiếu Tre Việt ...
 url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=watchlist&__rv__=video_home_www_playlist_video_list&locale=cs_CZ
 
 [chieutrucsaigon.com]
-match = -13.0%%
-title = TÌM HIỂU CHIẾU TRÚC CAO BẰNG BÁN TẠI SÀI GÒN
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/tim-hieu-chieu-truc-cao-bang-ban-tai-sai-gon-59.html
+match = -17.4%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [demxanh.com]
 match = -21.7%%
@@ -67,9 +67,9 @@ title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu-truc-cao-bang-778155
 
 [www.facebook.com]
-match = -73.9%%
-title = Chiếu Trúc Cao Bằng Cao Sơn dòng đối mục loại 1 | ‼️Địa ...
-url = https://www.facebook.com/demhong.vn/videos/chiếu-trúc-cao-bằng-cao-sơn-dòng-đối-mục-loại-1/843056673315667/?locale=de_DE
+match = 21.7%%
+title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
+url = https://www.facebook.com/chieutruccaobangcbg/
 
 [www.youtube.com]
 match = -117.4%%
