--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-13 17:13:21
+lastsearch = 2024-07-13 17:39:18
 
 [shopee.vn]
 match = -146.7%%
@@ -22,9 +22,9 @@ title = BẢNG GIÁ BÀN GHẾ ĐÁ TRƯỜNG AN NĂM 2024
 url = https://ghedatruongan.com/ban-ghe-da-gia-bao-nhieu/
 
 [ghedaviet.com]
-match = -100.0%%
-title = Bàn ghế đá dài Bazan GDBZ-06 - 0933832979
-url = https://ghedaviet.com/ban-ghe-da-dai-bazan-gdbz-06
+match = -93.3%%
+title = Ghế đá băng dài GDCV-59 - 0933832979
+url = https://ghedaviet.com/ghe-da-bang-dai-gdcv-59
 
 [anmoc.vn]
 match = -173.3%%
@@ -37,9 +37,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [bangheda.info]
-match = -20.0%%
-title = ghế đá mài giá rẻ [Ngắn 1m]
-url = https://bangheda.info/ghe-da-dai-gia-re/
+match = -140.0%%
+title = BÀN GHẾ ĐÁ | XƯỞNG SẢN XUẤT GHẾ ĐÁ THÀNH MỸ ...
+url = https://bangheda.info/
 
 [banghedagiasi.com]
 match = -93.3%%
