--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-13 13:17:20
+lastsearch = 2024-07-13 17:33:01
 
 [tuananh.vn]
 match = 12.0%%
@@ -27,9 +27,9 @@ title = [Cập nhật] Bảng giá đệm Tuấn Anh mới nhất 2021
 url = https://changagoidemsonghong.online/cap-nhat-bang-gia-dem-tuan-anh-moi-nhat-2020.html
 
 [entershopping.vn]
-match = -20.0%%
-title = Đệm bông ép Tuấn Anh Korea Gấm - chăn ga gối
-url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam.html
+match = -36.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus - chăn ga gối
+url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [sieuthidemonline.vn]
 match = -24.0%%
@@ -67,9 +67,9 @@ title = ️PHỤ KIỆN IDOL❤️ | LOMO CARD xinh thế này ...
 url = https://www.instagram.com/moji.idol/p/CzYvrbGvwS9/
 
 [www.facebook.com]
-match = 0.0%%
-title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm
-url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328&set=a.663634505792318
+match = -64.0%%
+title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm | An Dương District
+url = https://www.facebook.com/tuananh.vn/?locale=vi_VN
 
 [demviethome.vn]
 match = -36.0%%
