CI images update

--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-13 01:38:32
+lastsearch = 2024-07-13 17:44:15
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -115,4 +115,9 @@ url = http://mantuyn.vn/man-bung-vuong-22m-49.html
 match = -16.7%%
 title = Nhiều dự án giao thông lớn chậm tiến độ
 url = https://baobinhdinh.vn/viewer.aspx?macm=24&macmp=24&mabb=280057
+
+[vinmart365.com]
+match = -8.3%%
+title = Màn Chụp Tự Bung Đỉnh Vuông Cao Cấp - Vinmart365
+url = https://vinmart365.com/san-pham/man-chup-tu-bung-dinh-vuong-hang-cao-cap/
 
