--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-13 13:36:06
+lastsearch = 2024-07-13 17:45:23
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -27,14 +27,14 @@ title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
 url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
-match = 37.0%%
-title = Chăn ga gối Home mã H17-048
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
+match = 35.7%%
+title = Bộ chăn ga gối cao cấp mã UC22-018
+url = https://changagoidemsonghong.com/chan-ga-goi-uc018
 
 [flexhouse.vn]
-match = -17.9%%
-title = Bộ chăn ra gối cotton phối bèo nhiều màu sắc MM1175
-url = https://flexhouse.vn/bo-chan-ra-goi-cotton-phoi-beo-nhieu-mau-sac-mm1175
+match = -3.6%%
+title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
+url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [jysk.vn]
 match = -21.4%%
