--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-13 15:30:14
+lastsearch = 2024-07-13 17:49:33
 
 [shopee.vn]
 match = 2.9%%
-title = Chiếu Điều hoà cao su non siêu mát siêu xịn hàng chuẩn ...
-url = https://shopee.vn/Chiếu-Điều-hoà-cao-su-non-siêu-mát-siêu-xịn-hàng-chuẩn-loại-1-i.76119098.3432322614
+title = Chiếu điều hoà cao su non 3D chống nóng lưng kèm 2 vỏ ...
+url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-3D-chống-nóng-lưng-kèm-2-vỏ-gối-nằm-kích-thước-1m6x2m-1m8x2m-i.623633.16760413116
 
 [olbedding.com]
 match = 11.8%%
@@ -37,14 +37,14 @@ title = Chiếu Điều Hòa Cao Su Non
 url = https://www.facebook.com/groups/753270865357544/
 
 [khonemtonghop.com]
-match = 30.0%%
-title = Chiếu Cao Su Non Có Tốt Không?
-url = https://khonemtonghop.com/chieu-cao-su-non-co-tot-khong/
+match = 58.8%%
+title = Chiếu điều Hòa Cao Su Non Là Gì ...
+url = https://khonemtonghop.com/chieu-dieu-hoa-cao-su-non-la-gi/
 
 [suongtuyet.com]
-match = 2.9%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 17.6%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [www.olbedding.com]
 match = 11.8%%
@@ -105,4 +105,9 @@ url = https://tanhkhong.org/p1185a1515/5/dd066-nhu-chieu-thu-goi-ban
 match = 20.6%%
 title = CHIẾU ĐIỀU HÒA CAO SU NON CAO CẤP TẶNG 2 VỎ GỐI ...
 url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-dieu-hoa-mu-non-cao-su-cao-cap-tang-2-vo-goi-1m8x2m-sp22559.html
+
+[www.nemuytin.com]
+match = 11.8%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
+url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
 
