--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-13 14:48:33
+lastsearch = 2024-07-13 17:51:18
 
 [tiki.vn]
 match = -47.6%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -42.9%%
-title = CGV Cinemas Vietnam - Sau 4 ngày công ...
-url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
+match = -61.9%%
+title = CÔNG TY XUẤT KHẨU LAO ĐỘNG NHÂN ĐẠT-Kesa. ...
+url = https://www.facebook.com/xkld0987841938/posts/gấp-gấp-gấp-điện-tử-chiếu-mẫn-đào-viên-đài-bắc-cần-nhận-thêm-form-nam-chỉ-nhận-l/1717940138441061/
 
 [www.roc-taiwan.org]
 match = -19.0%%
@@ -22,9 +22,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -66.7%%
+title = 18x2 Beyond Youthful Days Có Chiếu Tại Đìa Loan Ko
+url = https://www.tiktok.com/discover/18x2-beyond-youthful-days-có-chiếu-tại-đìa-loan-ko
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -43,8 +43,8 @@ url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [m.facebook.com]
 match = -90.5%%
-title = Lotte Cinema - THANH XUÂN 18x2: LỮ TRÌNH HƯỚNG ...
-url = https://m.facebook.com/story.php/?story_fbid=807781184716598&id=100064541715866
+title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
+url = https://m.facebook.com/cgvcinemavietnam/photos/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844924327674339/
 
 [phimmoichillt.net]
 match = -123.8%%
@@ -87,9 +87,9 @@ title = Đài Loan (Trung Quốc) tiếp tục tìm kiếm 18 người mất tí
 url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich-sau-dong-dat-post803249.html
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [znews.vn]
 match = -109.5%%
