--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-13 10:50:47
+lastsearch = 2024-07-13 17:51:32
 
 [www.lazada.vn]
 match = -60.9%%
@@ -12,14 +12,14 @@ title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
 url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
 
 [www.facebook.com]
-match = 85.0%%
-title = Chiếu Nhựa Thái Bình
-url = https://www.facebook.com/chieunhuathaibinh/?locale=cs_CZ
+match = 52.2%%
+title = Chiếu Nhựa Thái Bình | Thanh Hóa
+url = https://www.facebook.com/chieunhuathaibinh/?locale=hr_HR
 
 [www.sendo.vn]
-match = -47.8%%
-title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
-url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
+match = 26.1%%
+title = chiếu nhựa thái bình 1m8 x2m - chieu1m8
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m8-x2m-43900792.html
 
 [shopee.vn]
 match = -78.3%%
@@ -72,9 +72,9 @@ title = Ngói Nhựa Thái Bình Giá Bán Lẻ Ngói Nhựa ASA/PVC 04 Lớp
 url = https://www.tonpvc.com/thai-binh-gia-ban-le-ngoi-nhua-asa-pvc-04-lop/
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu nhựa Thái Bình 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-160x200.html
+match = 13.0%%
+title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
 
 [h5.lazada.vn]
 match = -17.4%%
