CI images update

--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-13 17:34:38
+lastsearch = 2024-07-13 18:13:45
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -138.5%%
-title = Gani aka Michelle Cypher (@ghanizzle)
-url = https://www.instagram.com/ghanizzle/
+match = -10.0%%
+title = sylviagani
+url = https://www.instagram.com/sylviagani/?hl=en
 
 [www.nebf.com]
 match = -46.2%%
@@ -277,8 +277,8 @@ title = Ginny & Georgia (TV Series 2021
 url = https://www.imdb.com/title/tt10813940/
 
 [ottawabraves.com]
-match = -284.6%%
-title = Women's Flag Football vs Thomas University (Ga.) on 3/16 ...
+match = -292.3%%
+title = Women's Flag Football vs Thomas University (Ga.) on 3/16/2024
 url = https://ottawabraves.com/sports/womens-flag-football/stats/2024/thomas-university-ga-/boxscore/9867
 
 [www.soccerwire.com]
@@ -445,4 +445,9 @@ url = https://forums.mangadex.org/threads/kono-bijutsubu-ni-wa-mondai-ga-aru-vol
 match = -100.0%%
 title = American Dental Association: Home
 url = https://www.ada.org/
+
+[www.biblegateway.com]
+match = -269.2%%
+title = John 3:16 NIV - For God so loved the world that he gave
+url = https://www.biblegateway.com/passage/?search=John 3:16&version=NIV
 
