--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-13 16:14:27
+lastsearch = 2024-07-13 18:19:46
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -12,14 +12,14 @@ title = Everon EPT20041 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
 url = https://www.everonvn.vn/chi-tiet/Everon-EPT20041.html
 
 [everon.online]
-match = 6.7%%
-title = Bộ ga chun chần
-url = https://everon.online/collections/types?q=bo-ga-chun-chan
+match = -53.6%%
+title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
+url = https://everon.online/collections/dem-everon-kich-thuoc-1m4-140-190-140-200-140x190-140x200
 
 [www.diepxuan.com]
-match = -39.3%%
-title = Bộ ga chun chần THHome Tencel Modal 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-chan-thhome-tencel-modal-160x200.html
+match = -3.6%%
+title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [demxanh.com]
 match = -32.1%%
