--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-13 17:31:32
+lastsearch = 2024-07-13 18:13:25
 
 [www.diepxuan.com]
-match = -20.8%%
-title = Bộ ga gối chun xoa 2m.22 - Chăn ga gối đệm Điệp Xuân
+match = -62.5%%
+title = Điệp Xuân Bộ ga gối chun xoa 2m.22 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 
 [changagoidemsonghong.com]
