--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-13 14:45:14
+lastsearch = 2024-07-13 18:11:49
 
 [demxanh.com]
-match = 30.4%%
-title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
-url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
+match = -39.1%%
+title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
 
 [www.diepxuan.com]
 match = 21.7%%
-title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
+title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
 
 [uannga.vn]
 match = 56.5%%
