--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-13 15:33:06
+lastsearch = 2024-07-13 18:12:00
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -492,9 +492,9 @@ title = Tử vi con giáp tuần (8/7/2024 đến 14 ...
 url = https://2sao.vn/3-con-giap-danh-mat-van-may-tuong-lai-lao-doc-n-386007.html
 
 [tuoitre.vn]
-match = -109.5%%
-title = Nắng nóng làm hư đường băng, sân bay quốc tế phải ...
-url = https://tuoitre.vn/nang-nong-lam-hu-duong-bang-san-bay-quoc-te-phai-dong-cua-20240713125214493.htm
+match = -114.3%%
+title = Áp thấp nhiệt đới trên Biển Đông, hướng di chuyển vào ...
+url = https://tuoitre.vn/ap-thap-nhiet-doi-tren-bien-dong-huong-di-chuyen-vao-mien-trung-20240713172831131.htm
 
 [websosanh.vn]
 match = -81.0%%
@@ -520,4 +520,9 @@ url = http://caobangtv.vn/tin-tuc-n74895/ghi-nhan-126-tran-dong-dat-co-do-lon-tu
 match = -128.6%%
 title = Công bố chất lượng Hệ thống thông tin giải quyết thủ tục ...
 url = https://www.binhduong.gov.vn/thong-tin-tuyen-truyen/2024/07/981-cong-bo-chat-luong-he-thong-thong-tin-giai-quyet-thu-tuc-hanh-chinh-cap-bo-cap-tin
+
+[binhphuoc.gov.vn]
+match = -90.5%%
+title = Chơn Thành trao thẻ căn cước cho công dân dưới 14 tuổi
+url = https://binhphuoc.gov.vn/vi/news/chuyen-doi-so/chon-thanh-trao-the-can-cuoc-cho-cong-dan-duoi-14-tuoi-37688.html
 
