--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-13 17:48:16
+lastsearch = 2024-07-13 18:14:39
 
 [www.cms.gov]
 match = 4.5%%
@@ -127,9 +127,9 @@ title = MEET ALISON MASS
 url = https://www.stern.nyu.edu/sites/default/files/assets/documents/STERNbusiness-Sp16-Meet-Alison-Mass.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = 9.1%%
-title = Bacterial Terpenome - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
+match = -113.6%%
+title = Molecular Biology of Lung Cancer: Clinical Implications
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3367865/
 
 [westsideobserver.com]
 match = -58.3%%
@@ -177,8 +177,8 @@ title = Farm houses for sale in new hampshire [mJROCi]
 url = https://www.nitrc.org/links/?group_id=51&url=https://4835712.detsad147vrn.ru/5487923u6fe43a
 
 [explore.omsystem.com]
-match = 0.0%%
-title = 
+match = -12.5%%
+title = TG-7 - OM System
 url = https://explore.omsystem.com/us/en/tg-7
 
 [www.sohoonline.org]
@@ -289,7 +289,7 @@ url = https://www.mynavyhr.navy.mil/Portals/55/Reference/NOOCS/Vol2/Entire_Manua
 [www.talgov.com]
 match = -18.2%%
 title = Vendor Lookup | Doing Business
-url = https://www.talgov.com/doingbusiness/vendorlookup.aspx
+url = https://www.talgov.com/doingbusiness/vendorlookup
 
 [www.usmcu.edu]
 match = 4.5%%
@@ -590,4 +590,9 @@ url = https://dup15q.org/professionals/health-care-needs/seizures/epilepsy-treat
 match = 0.0%%
 title = NSCC Member Directory
 url = https://www.dtcc.com/-/media/Files/Downloads/client-center/NSCC/nscc.xls
+
+[www.alamedacountyca.gov]
+match = -122.7%%
+title = Find A Supplier > Supplier Listing By NAICS Categories ...
+url = http://www.alamedacountyca.gov/sleb_query_app/vendordirlistnaics.jsp?SECTOR_CODE=54
 
