--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-13 16:26:54
+lastsearch = 2024-07-13 18:15:52
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = -15.0%%
-title = Christina Mangurian, MD, MAS
-url = https://profiles.ucsf.edu/christina.mangurian
+match = -35.0%%
+title = Frederick Hecht, MD - UCSF Profiles
+url = https://profiles.ucsf.edu/frederick.hecht
 
 [cityofclovis.com]
 match = -65.0%%
