CI images update

--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-13 18:13:15
+lastsearch = 2024-07-13 18:26:56
 
 [www.reddit.com]
 match = -82.6%%
@@ -445,4 +445,9 @@ url = https://maint.loc.gov/law/mlr/pdf/Board-of-Review_Vol-74.pdf
 match = 4.3%%
 title = Google Fonts: Browse Fonts
 url = https://fonts.google.com/
+
+[www.zing-asia.co.uk]
+match = -91.3%%
+title = Oriental Kitchen Fermented Pork Bites 300g Vietnamese ...
+url = https://www.zing-asia.co.uk/Freshly-Frozen-Oriental-Food-from-Zing-Asia-Chester-UK/15397-oriental-kitchen-fermented-pork-bites-300g-vietnamese-nem-chua-tu-phap-fermented-pork-bites-3447574603102.html
 
