--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-13 15:19:35
+lastsearch = 2024-07-13 18:31:32
 
 [vinatools.com]
-match = -206.7%%
-title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
-url = https://vinatools.com/keo-cat-ton-d216-sbsk/
+match = -140.0%%
+title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
+url = https://vinatools.com/keo-cat-ton-d-216-116/
 
 [www.vietnamairport.vn]
 match = -93.3%%
@@ -205,4 +205,19 @@ url = https://ipv4.macbookpro.vn/Lacie-D2-Professional-16TB.aspx
 match = -206.7%%
 title = Xoilac TV - Xem Trực Tiếp Bóng Đá Xôi Lạc TV hôm nay HD
 url = https://xoilaczvv.tv/
+
+[creata.org.vn]
+match = -53.3%%
+title = TÀI LIỆU ĐÀO TẠO Y TẾ LIÊN TỤC
+url = https://creata.org.vn/wp-content/uploads/2021/07/1.Tài-liệu-CME_MMT-cơ-bản_Lớp-Bác-Sĩ.pdf
+
+[www.victoriavn.com]
+match = -6.7%%
+title = Victoria Healthcare
+url = https://www.victoriavn.com/
+
+[www.manulife.com.vn]
+match = -153.3%%
+title = DANH SÁCH CÁC TỈNH THÀNH CÓ CƠ SỞ Y TẾ ĐƯỢC ...
+url = https://www.manulife.com.vn/content/dam/insurance/vn/documents/service-docs/quyen-loi-hop-dong-bao-hiem/danh-sach-bao-lanh-vien-phi-tai-viet-nam.pdf
 
