--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-13 17:15:55
+lastsearch = 2024-07-13 18:28:15
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Nem Lai Vung, from a rustic dish to a heritage
 url = https://www.vietnam.vn/en/nem-lai-vung-tu-mon-an-dan-da-tro-thanh-di-san/
 
 [wattclarity.com.au]
-match = -76.2%%
-title = Expect the unexpected - It's the NEM after all
-url = https://wattclarity.com.au/articles/2022/02/expect-the-unexpected-its-the-nem-after-all/
+match = -142.9%%
+title = Balancing Supply and Demand …. in the fast approaching ' ...
+url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
 match = -142.9%%
@@ -158,8 +158,8 @@ url = https://www.vulture.com/2021/03/kimbra-interview-gotye-somebody-that-i-use
 
 [aemo.com.au]
 match = -114.3%%
-title = NEM Reform Electricity Wholesale Consultative Forum ( ...
-url = https://aemo.com.au/-/media/files/stakeholder_consultation/working_groups/other_meetings/electricity-wholesale-consultative-forum/meeting-16-presentation.pdf?la=en
+title = Record Demand in South Australia & Victoria 28 to 31 ...
+url = https://aemo.com.au/-/media/files/electricity/nem/market_notices_and_events/market_event_reports/archive/180-0091-pdf.pdf
 
 [www.nitrc.org]
 match = -21.4%%
