--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-13 16:13:49
+lastsearch = 2024-07-13 18:31:04
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 140x190
+match = 40.9%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [tiki.vn]
