--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-13 15:21:01
+lastsearch = 2024-07-13 18:50:01
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
 url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
 
 [demxanh.com]
-match = -81.0%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -28.6%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
 match = 9.5%%
