--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-13 17:37:36
+lastsearch = 2024-07-13 18:44:19
 
 [www.bible.com]
 match = 23.1%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -17.6%%
+title = Doktrin na ol Kavanen 78
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -47,9 +47,9 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70AIFITTINGS.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
-url = https://www.bibleref.com/Mark/2/Mark-2-22.html
+match = -23.5%%
+title = What does Matthew 20:22 mean?
+url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
 match = -217.6%%
