--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-13 17:16:28
+lastsearch = 2024-07-13 18:50:47
 
 [m.youtube.com]
 match = -144.4%%
@@ -42,9 +42,9 @@ title = [TPHCM] Bún Nem Nướng Siêu To Ăn Là No Lăn Ở Quận 10
 url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sieu-to-an-la-no-lan-o-quan-10/
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+match = -16.7%%
+title = Nệm siêu nhẹ 180x200x05 - Điệp Xuân
+url = https://www.diepxuan.com/nem-sieu-nhe-180x200x05.html
 
 [shopcamping.vn]
 match = -144.4%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -105.6%%
-title = Ăn vặt ngon Cali | NEM CHUA HỦ $65 ( 50 cái )
-url = https://m.facebook.com/groups/anvatngoncali/posts/8357068874306053/
+match = -138.9%%
+title = Nguoi Viet Colorado | 💥 NEM CUA BỂ VUÔNG SIÊU CHẤT ...
+url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
 
 [www.proz.com]
 match = -183.3%%
