--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-13 17:32:16
+lastsearch = 2024-07-13 19:54:11
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -37,8 +37,8 @@ title = Bộ chăn ga gối cao cấp mã UC22-018
 url = https://songhong.info/chan-ga-goi-uc018
 
 [www.diepxuan.com]
-match = -33.3%%
-title = Bộ ga gối chun xoa 18 - Chăn ga gối đệm Điệp Xuân
+match = -81.0%%
+title = Điệp Xuân Bộ ga gối chun xoa 18 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 
 [hoangkimhome.com]
