--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-13 19:29:28
+lastsearch = 2024-07-13 19:47:21
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -12,9 +12,9 @@ title = BÁN CHIẾU TRÚC VIỆT NAM QUẬN 12
 url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-viet-nam-quan-12-104.html
 
 [demxanh.com]
-match = 25.0%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -8.3%%
+title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
+url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
 match = -66.7%%
@@ -57,9 +57,9 @@ title = Chia sẻ kiến thức, kinh nghiệm sử dụng chiếu trúc (tre)
 url = https://chieutrucxinh.weebly.com/chia-se/previous/2
 
 [www.lazada.vn]
-match = -70.8%%
-title = Chiếu trúc/ chiếu tre 1m2*1m9 hàng Việt Nam cao cấp siêu ...
-url = https://www.lazada.vn/products/chieu-truc-chieu-tre-1m21m9-hang-viet-nam-cao-cap-sieu-re-chieu-khong-dung-vien-vai-ca-chieu-bang-hat-tre-i270848531.html
+match = 20.8%%
+title = [HCM]Chiếu trúc 0,8m x 19m đến 2m
+url = https://www.lazada.vn/products/hcmchieu-truc-08m-x-19m-den-2m-i405120490.html
 
 [thptthuthiem.hcm.edu.vn]
 match = -83.3%%
