--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-13 18:50:01
+lastsearch = 2024-07-13 19:54:00
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,14 +17,14 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [shopee.vn]
-match = -95.2%%
-title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
-url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
+match = -42.9%%
+title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
+url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [demxanh.com]
-match = -28.6%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = -81.0%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = 9.5%%
@@ -72,9 +72,9 @@ title = xã hội 53 dân tộc thiểu số ở 435 địa bàn
 url = https://baolaocai.vn/lao-cai-se-tien-hanh-dieu-tra-thu-thap-thuc-trang-kinh-te-xa-hoi-53-dan-toc-thieu-so-o-435-dia-ban-post385262.html
 
 [www.traveloka.com]
-match = -85.7%%
-title = động Batu - Thánh địa của đạo Hindu tại Malaysia
-url = https://www.traveloka.com/vi-vn/explore/destination/du-lich-dong-batu-malaysia/385103
+match = -119.0%%
+title = Khu du lịch Sơn Tiên – Điểm vui chơi hoành tráng nhất ...
+url = https://www.traveloka.com/vi-vn/explore/destination/khu-du-lich-son-tien/177767
 
 [chuyenhangviet.com]
 match = -57.1%%
