--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-13 17:36:45
+lastsearch = 2024-07-13 19:50:41
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Cruise Calendar 2024 / 2025 | Marella Cruises
-url = https://www.tui.co.uk/cruise/cruise-calendar/
+match = -40.0%%
+title = Flight and Travel Options
+url = https://www.tui.co.uk/destinations/info/travel-options
 
 [www.travelgossip.co.uk]
 match = -126.7%%
