CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-13 16:48:51
+lastsearch = 2024-07-13 20:29:00
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -635,4 +635,9 @@ url = https://congan.hanam.gov.vn/index.php/vi/news/tin-hoat-dong/luc-luong-antt
 match = 33.3%%
 title = Huyện Lạc Dương
 url = https://lacduong.lamdong.gov.vn/
+
+[tttt.ninhbinh.gov.vn]
+match = -50.0%%
+title = Kỹ thuật trồng lạc năng suất cao
+url = https://tttt.ninhbinh.gov.vn/ctmtqg-phat-trien-kt-xh-vung-dong-bao-dan-toc-thieu-so-va-mien-nui/ky-thuat-trong-lac-nang-suat-cao-4531.html
 
