--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-13 19:45:39
+lastsearch = 2024-07-13 20:33:32
 
 [burningman.org]
 match = 0.0%%
@@ -715,4 +715,9 @@ url = https://www.legodiscoverycenter.com/washington-dc/whats-inside/events/lego
 match = -166.7%%
 title = Minnesota Court Records Online (MCRO): Home Page
 url = https://publicaccess.courts.state.mn.us/
+
+[www.g-star.com]
+match = -213.3%%
+title = G-Star RAW® US | Shop Raw Denim | Summer Sale 2024 ...
+url = https://www.g-star.com/
 
