--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-13 15:18:53
+lastsearch = 2024-07-13 20:30:07
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/South_China_Sea
 [books.google.com]
 match = -108.7%%
 title = A Threat to the Peace: North Viet-Nam's Effort to Conquer ...
-url = https://books.google.com/books?id=c5NQAQAAMAAJ&pg=RA1-PA96&lpg=RA1-PA96&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=emSaR4wNz9&sig=ACfU3U0IBQnQba4E6YoUxq3qhBm3weiZdA&hl=en&sa=X&ved=2ahUKEwj9wIOsyqOHAxXjLkQIHccXCMYQ6AF6BAgjEAM
+url = https://books.google.com/books?id=c5NQAQAAMAAJ&pg=RA1-PA96&lpg=RA1-PA96&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=emSaR6vKwe&sig=ACfU3U1309xXW9Oisr8_MLQKhf_5AlpOHw&hl=en&sa=X&ved=2ahUKEwiT5eT0j6SHAxW_LzQIHVkXCW8Q6AF6BAgnEAM
 
 [www.travelweekly.com]
 match = -87.0%%
@@ -122,8 +122,8 @@ title = Trường Đại học Y Dược Thái Bình
 url = https://tbump.edu.vn/
 
 [www.reddit.com]
-match = 30.4%%
-title = How to pronounce Thai Binh.
+match = -21.7%%
+title = How to pronounce Thai Binh. : r/Vietnamese
 url = https://www.reddit.com/r/Vietnamese/comments/1d5d9f4/how_to_pronounce_thai_binh/
 
 [www.macom.com]
