--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-13 14:30:15
+lastsearch = 2024-07-13 20:29:56
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
 url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
-match = -231.2%%
-title = Điểm nóng thế giới 11/7: Mỹ hốt hoảng cuộc họp kín của Nga ...
-url = https://www.youtube.com/watch?v=t_SbqW_GD5E
+match = -187.5%%
+title = Nuôi thuỷ sản mùa nóng: Bí quyết tránh thất bại | VTC16
+url = https://www.youtube.com/watch?v=9eVWzfQu9Uo
 
 [books.google.com]
 match = -231.2%%
