--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-13 19:24:59
+lastsearch = 2024-07-13 20:28:27
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftleqOGpre&sig=ACfU3U1JrcvPomRTXGYP1UEt-Mfe4AaV7A&hl=en&sa=X&ved=2ahUKEwi93IatgaSHAxVZLEQIHbT3BCMQ6AF6BAgUEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftleqOKoic&sig=ACfU3U2pHWnlVgdtH18JJE3VOULBl2mXCA&hl=en&sa=X&ved=2ahUKEwiStYTFj6SHAxXpIEQIHR-HADIQ6AF6BAgUEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
