--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-13 20:19:41
+lastsearch = 2024-07-13 20:32:52
 
 [gobearcats.com]
 match = -142.1%%
@@ -132,9 +132,9 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -100.0%%
-title = Minya Pu
-url = https://profiles.ucsd.edu/minya.pu
+match = -21.1%%
+title = Karen Messer | UCSD Profiles
+url = https://profiles.ucsd.edu/karen.messer
 
 [som.cuanschutz.edu]
 match = -121.1%%
@@ -182,9 +182,9 @@ title = 2024 Fall Quarter/ Fall Semester Academic Calendar (All ...
 url = https://search.uconline.edu/docs/academic-calendar.pdf
 
 [www.dir.ca.gov]
-match = -126.3%%
-title = Workers' Compensation Appeals Board - Panel decisions
-url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+match = -21.4%%
+title = Lien Claimants
+url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [pubmed.ncbi.nlm.nih.gov]
 match = -142.1%%
