CI images update

--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-13 18:26:56
+lastsearch = 2024-07-13 20:44:09
 
 [www.reddit.com]
 match = -82.6%%
@@ -267,9 +267,9 @@ title = Korean Financial Authorities Address Mass Crypto Delisting
 url = https://cryptonews.com/news/south-korean-authority-address-concerns-over-mass-delisting.htm
 
 [www.koreanwar2.org]
-match = -26.1%%
-title = OCTOBER 1952 - 1ST MARINE DIVISION
-url = https://www.koreanwar2.org/kwp2/usmc/001_2/m001_cd24_1952_10_2632.pdf
+match = -30.4%%
+title = COMMAND DIARY - (VOL I) - JUNE 1953
+url = http://www.koreanwar2.org/kwp2/usmc/003/M003_CD5_COMMAND_DIARY_JUNE_1953_VOLUME_1.pdf
 
 [variety.com]
 match = -100.0%%
