--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-13 20:20:53
+lastsearch = 2024-07-13 20:52:22
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -185,4 +185,9 @@ url = https://abina.vn/vien-nhau-thai-cuu-age-no-more-ovine-placenta-60-vien/
 match = -21.4%%
 title = thang 10 nam 2016 trendia ban tinh quang binh
 url = https://kinhtexaydung.gov.vn/wp-content/uploads/2023/05/CBG-Thang-10-nam-2016-QBinh.pdf
+
+[thienphuoc.com]
+match = -32.1%%
+title = CÂY MẬT NHÂN, CÂY BÁ BỆNH HAY SÂM TONGCAT ALI ...
+url = http://thienphuoc.com/shop_news.php?l=vn&ac=13&mode=n&cn=359&n=7481&item=4
 
