--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-13 16:48:29
+lastsearch = 2024-07-13 20:47:05
 
 [bedding.vn]
 match = -123.1%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
 url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [songhonghanoi.vn]
-match = -176.9%%
-title = Bộ Chăn Ga Gối Sông Hồng Tencel S16 01 Ga Chun
-url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.html
+match = -146.2%%
+title = Bộ chăn ga gối Sông Hồng H16 043 ga chun
+url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16043-ga-chun.html
 
 [demhong.vn]
 match = -123.1%%
@@ -330,4 +330,14 @@ url = https://www.kaiyovietnam.vn/ga-chun-tran-soi-lanh-kaiyo-mau-xanh-kich-thuo
 match = -92.3%%
 title = UC Davis Dining Services's post
 url = https://m.facebook.com/UCDavisDiningServices/posts/5300015376740751/
+
+[www.facebook.com]
+match = -230.8%%
+title = Photos from the conference courtesy of Chun-Ju Lai
+url = https://www.facebook.com/groups/660136824030557/posts/photos-from-the-conference-courtesy-of-chun-ju-lai/8167861299924701/
+
+[codes.findlaw.com]
+match = -238.5%%
+title = Georgia Code Title 16. Crimes and Offenses § 16-15-3
+url = https://codes.findlaw.com/ga/title-16-crimes-and-offenses/ga-code-sect-16-15-3/
 
