--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-13 20:48:42
+lastsearch = 2024-07-13 21:16:08
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Bộ ga chun chần
 url = https://everon.online/collections/types?q=bo-ga-chun-chan
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
+match = -39.3%%
+title = Bộ ga chun chần THHome Tencel Modal 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-chan-thhome-tencel-modal-160x200.html
 
 [demxanh.com]
 match = -32.1%%
