--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-13 19:22:25
+lastsearch = 2024-07-13 21:12:57
 
 [vinatools.com]
-match = -140.0%%
-title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
-url = https://vinatools.com/keo-cat-ton-d-216-116/
+match = -206.7%%
+title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
+url = https://vinatools.com/keo-cat-ton-d216-sbsk/
 
 [www.vietnamairport.vn]
 match = -93.3%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -30.0%%
-title = 29 tháng 2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = 0.0%%
+title = Black Kingdom - D2
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=hi_IN
 
 [banhang.shopee.vn]
 match = -66.7%%
