--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-13 16:48:40
+lastsearch = 2024-07-13 21:18:00
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -17,9 +17,9 @@ title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [shopee.vn]
-match = 6.5%%
-title = chiếu trúc hạt giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc hạt
+match = 16.1%%
+title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc
 
 [tiki.vn]
 match = -6.5%%
@@ -47,9 +47,9 @@ title = Chiếu trúc quế lâm loại 1 16 20
 url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 
 [www.facebook.com]
-match = 66.7%%
-title = Chiếu Trúc Quế Lâm | Hai Phong
-url = https://www.facebook.com/ChieuTrucQueLam/
+match = -31.6%%
+title = Thế Giới Chiếu Trúc
+url = https://www.facebook.com/thegioichieutruc/
 
 [www.dienmayxanh.com]
 match = -29.0%%
