--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-13 20:51:49
+lastsearch = 2024-07-13 21:11:25
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -10.0%%
-title = sylviagani
-url = https://www.instagram.com/sylviagani/?hl=en
+match = -138.5%%
+title = Gani aka Michelle Cypher (@ghanizzle)
+url = https://www.instagram.com/ghanizzle/
 
 [www.nebf.com]
 match = -46.2%%
