--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x400.html
 lastopen = 2024-06-07 00:22:51
 
 [search]
-lastsearch = 2024-07-13 18:45:17
+lastsearch = 2024-07-13 21:27:49
 
 [www.diepxuan.com]
-match = 48.5%%
-title = Chiếu nhựa Hà Nội 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x200.html
+match = 42.4%%
+title = Điệp Xuân Chiếu nhựa Hà Nội 180x300
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x300.html
 
 [shopee.vn]
 match = 9.1%%
