--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-13 18:24:35
+lastsearch = 2024-07-13 21:35:20
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -64,7 +64,7 @@ url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/faq/ccic-omb
 [www.leg.state.fl.us]
 match = -170.6%%
 title = The 2023 Florida Statutes (including Special Session C)
-url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
+url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/0720.html
 
 [sofl.cooperatornews.com]
 match = -152.9%%
@@ -345,4 +345,14 @@ url = https://www.fema.gov/home
 match = -117.6%%
 title = U.S. Environmental Protection Agency | US EPA
 url = https://www.epa.gov/home
+
+[coloradosun.com]
+match = -194.1%%
+title = HOA-foreclosed homes are auctioned off for a fraction of ...
+url = https://coloradosun.com/2023/08/14/hoa-foreclosed-homes-auction-equity/
+
+[www.legis.iowa.gov]
+match = 0.0%%
+title = House File 2442
+url = https://www.legis.iowa.gov/DOCS/GA/79GA/Legislation/HF/02400/HF02442/Current.html
 
