CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-13 21:34:56
+lastsearch = 2024-07-13 22:12:19
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/@cocoon.vietnam/video/7357331292922449160
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTYNmE4E&sig=ACfU3U0osHe6luYjgAVV9swMF-jkpI9Z8g&hl=en&sa=X&ved=2ahUKEwiq6PSynqSHAxWlFlkFHfFZB-AQ6AF6BAgTEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTYNoH_H&sig=ACfU3U2aDLS1loAppbwaF1I5IVtfIb4jdQ&hl=en&sa=X&ved=2ahUKEwiT68jgpqSHAxUWmO4BHchlDX8Q6AF6BAgUEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -74,7 +74,7 @@ url = https://fujimaster.com.vn/
 [store.steampowered.com]
 match = -76.9%%
 title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260?l=vietnamese&snr=2_9_100006_100202_apphubheader
+url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=34646864
 
 [vi.wikipedia.org]
 match = -3.8%%
