--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-13 21:16:20
+lastsearch = 2024-07-13 22:15:40
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chiếu Tre Shikada Nhật Bản cao cấp 160x200cm - Kyoryo
 url = https://kyoryo.vn/chieu-cao-cap/chieu-tre-shikada-nhat-ban-cao-cap-160x200cm.html
 
 [chieutrelanlan.com]
-match = -87.0%%
-title = Chia sẻ, kinh nghiệm sử dụng chiếu trúc, chiếu tre bền đẹp.
-url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
+match = -4.3%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
 
 [demxanh.com]
 match = -87.0%%
