--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-07-13 18:30:11
+lastsearch = 2024-07-13 22:15:52
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -25,4 +25,19 @@ url = https://shopee.vn/Đệm-Memory-Foam-Massage-Kawaii-Dreamland-Nệm-Công-
 match = -6.2%%
 title = Đệm bông ép Dreamland giá rẻ, chính hãng tại Hà Nội
 url = https://demxanh.com/dem-bong-ep-dreamland.html
+
+[www.youtube.com]
+match = -12.5%%
+title = Dreamfoam Willow Eurotop Latex Mattress Review
+url = https://www.youtube.com/watch?v=AUxW3t98xPk
+
+[www.amazon.com]
+match = -3.1%%
+title = Customer reviews: Arctic Dreams 10& ...
+url = https://www.amazon.com/Dreamfoam-Bedding-10-Inch-Cooling-Mattress/product-reviews/B013L4ZWWW
+
+[forum.mattressunderground.com]
+match = -37.5%%
+title = Pulled the trigger today and purchased the Dreamfoam ...
+url = https://forum.mattressunderground.com/t/pulled-the-trigger-today-and-purchased-the-dreamfoam-ultimate-dreams-13inch-gel-memory-foam/6902
 
