--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-13 17:52:03
+lastsearch = 2024-07-13 22:11:46
 
 [shopee.vn]
-match = -114.3%%
-title = Thảm lông trải sàn lót sàn phòng khách trải giường phòng ...
-url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-giường-phòng-ngủ-thảm-lông-trắng-loang-mịn-chụp-ảnh-hình-tròn-vuông-1m6x2m-i.472596491.3194973741
+match = -95.2%%
+title = Thảm lông loang - thảm trải chân giường siêu mịn khổ ...
+url = https://shopee.vn/Thảm-lông-loang-thảm-trải-chân-giường-siêu-mịn-khổ-M6X2M-1mx1m6-80cmx2m-50x1m6-nhập-khẩu-loại-1-i.120420833.4524916116
 
 [www.lazada.vn]
 match = -76.2%%
