CI images update

--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-13 22:11:46
+lastsearch = 2024-07-13 22:28:18
 
 [shopee.vn]
 match = -95.2%%
@@ -53,8 +53,8 @@ url = https://lanhadecor.vn/san-pham/giuong-boc-nem-lnd-16/
 
 [ru9.vn]
 match = -81.0%%
-title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+title = Đệm giường đôi có kích thước bao nhiêu? Top mẫu ...
+url = https://ru9.vn/blogs/magazine/dem-doi
 
 [edena.vn]
 match = -38.1%%
