CI images update

--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-13 22:14:33
+lastsearch = 2024-07-13 22:49:42
 
 [chieutrucsaigon.com]
-match = 33.3%%
-title = BÁN CHIẾU TRÚC VIỆT NAM QUẬN 12
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-viet-nam-quan-12-104.html
+match = -20.8%%
+title = XU HƯỚNG SỬ DỤNG CHIẾU TĂM TRÚC NĂM 2019
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/xu-huong-su-dung-chieu-tam-truc-nam-2019-68.html
 
 [demxanh.com]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
 url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [www.youtube.com]
-match = -62.5%%
-title = Giới thiệu Chiếu tre Phổ Mến 2019 - Made in Việt Nam
-url = https://www.youtube.com/watch?v=vDNSIf7E7CY
+match = 4.2%%
+title = ANTV - Truyền hình Công an Nhân dân
+url = https://www.youtube.com/channel/UCIg56SgvoZF8Qg0Jx_gh6Pg
 
 [chieutrucxinh.weebly.com]
 match = -70.8%%
@@ -74,7 +74,7 @@ url = https://masothue.com/4700292429-cong-ty-co-phan-tap-doan-chieu-truc-viet-n
 [svhttdl.bentre.gov.vn]
 match = 8.3%%
 title = Thông tin cần biết - Tổng quát
-url = https://svhttdl.bentre.gov.vn/Lists/ThongTinCanBiet/Tongquat.aspx?Paged=TRUE&p_PublishedDate=20210723 01:00:00&p_ID=591&PageFirstRow=211&&View={52E84853-BA9D-41EB-AC60-38709374B64B}
+url = https://svhttdl.bentre.gov.vn/Lists/ThongTinCanBiet/Tongquat.aspx?Paged=TRUE&p_PublishedDate=20210816 12:00:00&p_ID=600&PageFirstRow=361&&View={52E84853-BA9D-41EB-AC60-38709374B64B}
 
 [dichvu.vtvcab.vn]
 match = 4.2%%
@@ -100,4 +100,14 @@ url = https://zingnews.vn/thieu-giay-xet-nghiem-ncov-gan-800-xe-phai-quay-dau-o-
 match = -66.7%%
 title = Nữ sinh Nhật Bản sống 19 ngày cô độc trên đảo hoang
 url = https://znews.vn/Nu-sinh-Nhat-Ban-song-19-ngay-co-doc-tren-dao-hoang-post628005.html
+
+[thanhnien.vn]
+match = -45.8%%
+title = [TRỰC TIẾP] Tuyên án vụ Công ty Alibaba chiều 29.12
+url = https://thanhnien.vn/truc-tiep-tuyen-an-vu-cong-ty-alibaba-chieu-2912-vu-an-ngan-ti-rung-dong-du-luan-1851536859.htm
+
+[quochoi.vn]
+match = 4.2%%
+title = Cổng thông tin điện tử Quốc Hội
+url = https://quochoi.vn/
 
