--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-13 19:54:35
+lastsearch = 2024-07-13 22:46:18
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -127.8%%
-title = Khay cuốn nem siêu tốc | KHAY CUỐN SIÊU TỐC | CUỐN ...
-url = https://www.facebook.com/ngoinhachichbong/videos/khay-cuốn-nem-siêu-tốc/1791938007504711/
+match = -33.3%%
+title = Đặc Sản - Ăn Vặt Việt Nam tại Mỹ
+url = https://www.facebook.com/groups/956905268092222/
 
 [thegioinem.com]
 match = 23.5%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -172.2%%
+title = Replying to @user74757483939 Brodard’s nem nuong sauce ...
+url = https://www.tiktok.com/@quyen_cooks/video/7216197212018068779?lang=en
 
 [www.diepxuan.com]
 match = 44.4%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ 9F 14
 url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 
 [m.facebook.com]
-match = -50.0%%
-title = Ăn Ngon Bà rịa | ❤NEM NƯỚNG NHA TRANG❤️
-url = https://m.facebook.com/groups/2222988021289951/posts/3638882973033775/
+match = 6.7%%
+title = Người Việt Cali
+url = https://m.facebook.com/groups/1330533356979172/
 
 [emartmall.com.vn]
 match = 0.0%%
