--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-13 19:49:45
+lastsearch = 2024-07-13 22:44:25
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -161.9%%
-title = 20240216 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
-url = https://www.youtube.com/watch?v=ghjt9vaH10I
+match = -85.7%%
+title = 🇹🇼 Nửa tháng "chữa lành" ở Đài Loan - VLOG TỔNG HỢP ...
+url = https://www.youtube.com/watch?v=sZD9zKhOwx0
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -42.9%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -57.1%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [www.taiwanembassy.org]
 match = -19.0%%
@@ -77,9 +77,9 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -114.3%%
-title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
-url = https://visana.vn/visa-dai-loan/
+match = -119.0%%
+title = Tất tần tật những điều cần biết về visa Quan Hồng Đài Loan
+url = https://visana.vn/visa-quan-hong-dai-loan/
 
 [www.tiktok.com]
 match = -9.5%%
@@ -139,7 +139,7 @@ url = https://www.kkday.com/vi/product/134232
 [m.facebook.com]
 match = -52.4%%
 title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
-url = https://m.facebook.com/groups/266525127391292/
+url = https://m.facebook.com/groups/anchoidailoan/posts/298860637491074/
 
 [znews.vn]
 match = -119.0%%
