--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-13 22:20:30
+lastsearch = 2024-07-13 22:47:17
 
 [demxanh.com]
 match = -42.9%%
@@ -112,9 +112,9 @@ title = Batavus greenparks kettingkast [V7seXc]
 url = http://www.responsinator.com/?aaa&ccode=0001&classname=产品展示&mnid=51918&url=https://xn--80abg0cjq.xn--p1ai/5368124sdzhrozytomskrufe5fe43y
 
 [archive.org]
-match = -7.1%%
-title = Schumann frequenz live stream [tKao2f]
-url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn--80afptqn.xn--p1ai/8723491wwwhuoyanbaocomze5fe43y
+match = 7.1%%
+title = Video help, tips, and techniques
+url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://911soft.ru/dxcegkindfe99.html
 
 [www.semex.com]
 match = -32.1%%
@@ -152,9 +152,9 @@ title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -21.4%%
-title = Lisa star sessions [WLXTbJ] - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn-----7kc5bafcjm5adlkd0i3c.xn--p1ai/8eTt7VWygsfe98
+match = 3.6%%
+title = Hotels in Lebanon - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1aadcebcueff0c6d7d.xn--p1ai/6879521dpafbso02-04tpay8comc4fe43y
 
 [news.google.it]
 match = -3.6%%
