--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-13 19:47:12
+lastsearch = 2024-07-13 22:49:10
 
 [dreamland.vn]
 match = -32.0%%
@@ -12,9 +12,9 @@ title = Dreamland chuyên chăn ga gối đệm cao cấp
 url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
 
 [demxanh.com]
-match = 0.0%%
-title = Gối tựa Đệm Xanh giá rẻ tại Hà Nội
-url = https://demxanh.com/goi-tua-dem-xanh.html
+match = -24.0%%
+title = Chăn ga gối cưới Perfect 6 món màu đỏ P6M04
+url = https://demxanh.com/chan-ga-goi-cuoi-perfect-6-mon-mau-do-p6m04.html
 
 [www.diepxuan.com]
 match = 48.0%%
