--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-13 20:35:43
+lastsearch = 2024-07-13 22:45:33
 
 [shopee.vn]
 match = -25.0%%
@@ -80,4 +80,9 @@ url = http://thamthienhoang.com/tham-dam-chan/tham-cua-de-cao-su/
 match = -20.8%%
 title = Thảm chùi chân 40x60 cm màu đen hoan nghênh
 url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.html
+
+[sieuthinguyenkim.com]
+match = -62.5%%
+title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
+url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
 
