CI images update

--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-13 22:47:17
+lastsearch = 2024-07-13 23:32:54
 
 [demxanh.com]
 match = -42.9%%
@@ -27,9 +27,9 @@ title = Top 8 cửa hàng bán chăn ga gối nệm Quận 1 chất lượng ...
 url = https://vuanem.com/blog/cua-hang-chan-ga-goi-nem-quan-1.html
 
 [demxinh.vn]
-match = -67.9%%
-title = [HỎI ĐÁP] Vải TC là gì? Ứng dụng của vải TC trong đời sống
-url = https://demxinh.vn/tong-hop/vai-tc.html
+match = -50.0%%
+title = Vải Viscose là gì? Đặc tính và các ứng dụng phổ biến
+url = https://demxinh.vn/tong-hop/vai-viscose.html
 
 [www.vbet.com]
 match = -10.7%%
