--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-13 22:48:49
+lastsearch = 2024-07-13 23:31:50
 
 [www.riotgames.com]
 match = -84.0%%
@@ -17,9 +17,9 @@ title = How to get a job in Korea as a non-Korean (again)
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
-match = -92.0%%
-title = Why North Korea’s dumping garbage on South Korea | About ...
-url = https://www.youtube.com/watch?v=SU3JMXEUtgg
+match = -25.0%%
+title = Korean VS German🇰🇷🇦🇹🇩🇪
+url = https://www.youtube.com/watch?v=MJWRS6eZ9YE
 
 [www.diepxuan.com]
 match = 60.0%%
@@ -95,4 +95,9 @@ url = https://m.youtube.com/shorts/S_16jBH04NY
 match = 0.0%%
 title = 
 url = https://visaguide.world/moving-to/south-korea/
+
+[twitter.com]
+match = -20.0%%
+title = ru486 on X: "@imMAK02 North Korea?" / X
+url = https://twitter.com/r2b2grandma/status/914646244206743552
 
