--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-13 22:50:26
+lastsearch = 2024-07-13 23:37:07
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -28,8 +28,8 @@ url = https://demhong.vn/chan-ga-goi-song-hong-don-sac-khong-chan/
 
 [chandem.com.vn]
 match = 34.6%%
-title = Bộ chăn ga gối Hidden Beauty Ctt91
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-gem-ctt91/
+title = Bộ chăn ga gối cao cấp Chang My P144
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-p144/
 
 [www.koala.vn]
 match = -3.8%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối cao cấp mã UC22-018
 url = https://songhong.info/chan-ga-goi-uc018
 
 [thegioichanra.com]
-match = 30.8%%
-title = Bộ Chăn Ga Gối Tencel Edena Love L030
-url = https://thegioichanra.com/san-pham/bo-chan-ga-goi-tencel-edena-love-l030/
+match = 53.8%%
+title = Bộ Chăn Ga Gối Solid Edena 374
+url = https://thegioichanra.com/san-pham/bo-chan-ga-goi-solid-edena-374/
 
 [demxanh.com]
 match = -3.8%%
