--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-13 18:28:59
+lastsearch = 2024-07-13 23:37:50
 
 [www.diepxuan.com]
-match = -20.8%%
-title = Bộ ga gối chun xoa 2m.22 - Chăn ga gối đệm Điệp Xuân
+match = -62.5%%
+title = Điệp Xuân Bộ ga gối chun xoa 2m.22 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 
 [changagoidemsonghong.com]
@@ -18,8 +18,8 @@ url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [songhong.info]
 match = -16.7%%
-title = Bộ chăn ga gối cotton 100%% dòng Basic mã BC-29
-url = https://songhong.info/chan-ga-goi-bc29
+title = Mẫu chăn ga gối 100%% cotton mã mầu BC22-067
+url = https://songhong.info/chan-ga-goi-bc67
 
 [hanvico.com.vn]
 match = 41.7%%
