--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-13 20:44:52
+lastsearch = 2024-07-13 23:33:05
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,14 +22,14 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -53.3%%
-title = Đèn rọi COB 8020 HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-roi-cob-8020-htlight
+match = -133.3%%
+title = Đèn mắt ếch chiếu điểm HT 8094 10W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
 
 [www.htlightlevel.vn]
-match = -120.0%%
-title = Đèn Rọi Ray 8019 Tay Trắng - HT Max Light
-url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
+match = -193.3%%
+title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
+url = https://www.htlightlevel.vn/den-roi-co-5w/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
