--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-13 21:35:42
+lastsearch = 2024-07-13 23:36:25
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -92,9 +92,9 @@ title = Khám phá làng nghề dệt chiếu lác ở Long An
 url = https://baomoi.com/kham-pha-lang-nghe-det-chieu-lac-o-long-an-c48038158.epi
 
 [books.google.com]
-match = -187.5%%
-title = 10 Điều Tạo Nên Số Phận - Page 46 - Google Books Result
-url = https://books.google.com/books?id=gnsEEAAAQBAJ&pg=PA46&lpg=PA46&dq=chieu+lac+soc+10&source=bl&ots=2XqfYuzaY0&sig=ACfU3U233aDFNHd_RA3P2u8FIs5_JanUyA&hl=en&sa=X&ved=2ahUKEwjDzNTI3aOHAxUkFFkFHQX7CnwQ6AF6BAgdEAM
+match = -212.5%%
+title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
+url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+10&source=bl&ots=LZu5YXgCYl&sig=ACfU3U22FaL73EvXBuFnkvvP37c4_nTsuw&hl=en&sa=X&ved=2ahUKEwj_ovXGuaSHAxXSODQIHW22AmwQ6AF6BAgfEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
