--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-13 22:46:18
+lastsearch = 2024-07-13 23:31:26
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -33.3%%
-title = Đặc Sản - Ăn Vặt Việt Nam tại Mỹ
-url = https://www.facebook.com/groups/956905268092222/
+match = -11.1%%
+title = Nem Nướng | Ho Chi Minh City
+url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
 
 [thegioinem.com]
 match = 23.5%%
@@ -32,9 +32,9 @@ title = Nệm cao su, gối, giường, salon | Kymdan - Website chính hãng
 url = https://www.kymdan.com/
 
 [www.youtube.com]
-match = -161.1%%
-title = Bí quyết làm Nem nướng bằng chảo giòn dai, nước chấm ...
-url = https://www.youtube.com/watch?v=2aD54Ka5Reg
+match = -133.3%%
+title = Cách làm NEM CÔNG CHẢ PHƯỢNG đón Tết cực dễ, cực ...
+url = https://www.youtube.com/watch?v=aDzQbk-eQvQ
 
 [www.instagram.com]
 match = -172.2%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ 9F 14
 url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 
 [m.facebook.com]
-match = 6.7%%
-title = Người Việt Cali
-url = https://m.facebook.com/groups/1330533356979172/
+match = -138.9%%
+title = Nguoi Viet Colorado | 💥 NEM CUA BỂ VUÔNG SIÊU CHẤT ...
+url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
 
 [emartmall.com.vn]
 match = 0.0%%
