CI images update

--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-13 23:36:02
+lastsearch = 2024-07-13 23:44:40
 
 [www.instagram.com]
-match = -176.9%%
-title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
-url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
+match = -161.5%%
+title = (@katrinacyt) • Instagram photos and videos
+url = https://www.instagram.com/katrinacyt/
 
 [hk.linkedin.com]
-match = -100.0%%
-title = Hoi Yee Ng - Christian Dior Couture
-url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
+match = -76.9%%
+title = Fanny Chan - Christian Dior Couture
+url = https://hk.linkedin.com/in/fanny-chan-938952bb
 
 [wwd.com]
 match = -238.5%%
@@ -107,9 +107,9 @@ title = WAI SENG CHAN - Senior Sales Associate - Christian Dior ...
 url = https://my.linkedin.com/in/wai-seng-chan-791010270
 
 [www.dior.com]
-match = -30.8%%
-title = Dior official website
-url = https://www.dior.com/en_int/fashion
+match = -46.2%%
+title = Dior official website | DIOR
+url = https://www.dior.com/
 
 [www.gettyimages.fr]
 match = -253.8%%
@@ -280,4 +280,9 @@ url = https://www.luxurydaily.com/celebrity-ambassador-crew-reintroduce-rouge-di
 match = 0.0%%
 title = 
 url = https://brightside.me/articles/the-story-of-a-kitchen-maid-that-became-the-favorite-model-of-christian-dior-798703/
+
+[core.ac.uk]
+match = -92.3%%
+title = SPECTACULAR POST-COLONIAL CITIES
+url = https://core.ac.uk/download/pdf/56373292.pdf
 
