--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-07-13 23:34:23
+lastsearch = 2024-07-13 23:51:59
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -255,4 +255,14 @@ url = https://hoavouu.com/p14a43298/6/thu-moi-tiec-chay-van-nghe-gay-quy-tu-bo-c
 match = 5.0%%
 title = Sở Y tế tỉnh Yên Bái
 url = https://soyte.yenbai.gov.vn/tin-hoat-dong/?UserKey=Da-16-ngay-khong-ghi-nhan-ca-mac-moi-COVID-19-o-cong-dong-Viet-Nam-tai-khoi-dong-nhieu-du&PageIndex=4
+
+[www.phunuvagiadinh.vn]
+match = -46.4%%
+title = Phụ Nữ Và Gia Đình - Chuyên trang điện tử dành cho Phụ Nữ
+url = https://www.phunuvagiadinh.vn/
+
+[nguoi-noi-tieng.com]
+match = -46.4%%
+title = Phim Việt không có dòng phim mùa hè? - Người nổi tiếng
+url = https://nguoi-noi-tieng.com/giai-tri/phim-viet-khong-co-dong-phim-mua-he-1769080
 
