--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-13 23:15:23
+lastsearch = 2024-07-13 23:52:53
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng H16 043 ga chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16043-ga-chun.html
 
 [cuahangchangagoidem.com]
-match = -41.7%%
-title = Cửa Hàng Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt
-url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
+match = -66.7%%
+title = Chăn Ga Gối Đệm Cotton Giá Tốt Được Yêu Thích Nhất 2024
+url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cotton-dep/
 
 [tiki.vn]
 match = 0.0%%
@@ -57,9 +57,9 @@ title = Bộ Chăn Ga Gối Đệm Mùa Hè Chất Vải Lụa Siêu Mát Mềm 
 url = https://manbinhminh.com/2415/bo-chan-ga-goi-dem-mua-he-chat-vai-lua-sieu-mat-mem-min-an-toan-khong-tam-mau.aspx
 
 [suongtuyet.com]
-match = 41.7%%
-title = Bộ Chăn Ga Gối Lụa Silk Thêu LSP-16
-url = https://suongtuyet.com/bo-chan-ga-goi-lua-silk-theu-lsp-16
+match = -54.2%%
+title = Bộ Chăn Ga Màu Xanh Lá Cây Đẹp, Giá Rẻ, Mẫu Mới Năm ...
+url = https://suongtuyet.com/bo-chan-ga-mau-xanh-la-cay-dep.html
 
 [juliabedding.com]
 match = -58.3%%
