--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-13 17:33:01
+lastsearch = 2024-07-13 23:46:17
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông Adaptive Fiber 3M
-url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
+match = -72.7%%
+title = Đệm bông ép
+url = https://tuananh.vn/dem-bong-ep-c51.html
 
 [demxanh.com]
-match = -28.0%%
-title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
+match = -48.0%%
+title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
 match = -40.0%%
@@ -67,9 +67,9 @@ title = ️PHỤ KIỆN IDOL❤️ | LOMO CARD xinh thế này ...
 url = https://www.instagram.com/moji.idol/p/CzYvrbGvwS9/
 
 [www.facebook.com]
-match = -64.0%%
-title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm | An Dương District
-url = https://www.facebook.com/tuananh.vn/?locale=vi_VN
+match = 0.0%%
+title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm
+url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328&set=a.663634505792318
 
 [demviethome.vn]
 match = -36.0%%
