CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-13 23:40:26
+lastsearch = 2024-07-14 00:10:51
 
 [en.wikipedia.org]
-match = -10.0%%
-title = Donghak Peasant Revolution
-url = https://en.wikipedia.org/wiki/Donghak_Peasant_Revolution
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -337,9 +337,9 @@ title = Ratios Cedears
 url = https://www.gabrielmartin.yt/tools/ratio
 
 [www.nti.org]
-match = -15.0%%
-title = North Korea Chemical Overview
-url = https://www.nti.org/analysis/articles/north-korea-chemical/
+match = -25.0%%
+title = North Korea Chemical Facilities
+url = https://www.nti.org/analysis/articles/north-korea-chemical-facilities/
 
 [10mag.com]
 match = 0.0%%
@@ -380,4 +380,9 @@ url = https://www.barchart.com/story/news/27189634/stocks-climb-as-nasdaq-100-po
 match = -15.0%%
 title = Runeterra Reforged Championship
 url = https://liquipedia.net/tft/Runeterra_Reforged/Championship
+
+[www.twitch.tv]
+match = -36.4%%
+title = lol_nemesis
+url = https://www.twitch.tv/lol_nemesis
 
