--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-13 23:52:53
+lastsearch = 2024-07-14 00:15:03
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -12,8 +12,8 @@ title = Chăn ga gối classic cotton mã C16-C38
 url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [www.diepxuan.com]
-match = -58.3%%
-title = Điệp Xuân Bộ chăn ga gối màu rẻ 16 - Chăn ga gối đệm Điệp Xuân
+match = 58.3%%
+title = Điệp Xuân Bộ chăn ga gối màu rẻ 16
 url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 
 [nangstore.vn]
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng H16 043 ga chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16043-ga-chun.html
 
 [cuahangchangagoidem.com]
-match = -66.7%%
-title = Chăn Ga Gối Đệm Cotton Giá Tốt Được Yêu Thích Nhất 2024
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cotton-dep/
+match = -41.7%%
+title = Cửa Hàng Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [tiki.vn]
 match = 0.0%%
