--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-13 22:49:42
+lastsearch = 2024-07-14 00:11:45
 
 [chieutrucsaigon.com]
-match = -20.8%%
-title = XU HƯỚNG SỬ DỤNG CHIẾU TĂM TRÚC NĂM 2019
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/xu-huong-su-dung-chieu-tam-truc-nam-2019-68.html
+match = 33.3%%
+title = BÁN CHIẾU TRÚC VIỆT NAM QUẬN 12
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-viet-nam-quan-12-104.html
 
 [demxanh.com]
 match = -8.3%%
