--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-13 23:32:54
+lastsearch = 2024-07-14 00:15:23
 
 [demxanh.com]
-match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
+match = -3.6%%
+title = Bộ ga chun Cotton chống thấm màu ghi nhạt
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+match = 25.0%%
+title = Ga phủ ESM20013 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
