--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-13 17:51:52
+lastsearch = 2024-07-14 00:14:41
 
 [www.mantubung.com]
 match = -100.0%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = 27.8%%
-title = Màn chụp tự bung trẻ em cao cấp
-url = https://shopee.vn/Màn-chụp-tự-bung-trẻ-em-cao-cấp-i.19058947.6652441162
+match = -100.0%%
+title = Màn chụp tự bung cho bé ⚡LOẠI 1⚡ Mùng chụp ngủ tự ...
+url = https://shopee.vn/Màn-chụp-tự-bung-cho-bé-⚡LOẠI-1⚡-Mùng-chụp-ngủ-tự-bung-xếp-chống-muỗi-cho-bé-nhỏ-lớn-trẻ-em-sơ-sinh-i.236260085.10218972280
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -42,9 +42,9 @@ title = mùng chụp tự bung gấp gọn cao cấp easy dream
 url = https://easydream.vn/man-mung-chup-tu-bung-gap-gon-danh-cho-nguoi-lon-134-15.html
 
 [www.mungtubung.com]
-match = -116.7%%
-title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
-url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
+match = -105.6%%
+title = Mùng Chụp Chống Muỗi Trẻ Em Tự Bung Cao Cấp Sản ...
+url = https://www.mungtubung.com/mung-tre-em-tu-bung-cao-cap-77162.html
 
 [mungmocmien.com]
 match = -111.1%%
