--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-13 23:44:40
+lastsearch = 2024-07-14 00:29:40
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -176.9%%
+title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
+url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
 
 [hk.linkedin.com]
-match = -76.9%%
-title = Fanny Chan - Christian Dior Couture
-url = https://hk.linkedin.com/in/fanny-chan-938952bb
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -238.5%%
