--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-13 23:52:21
+lastsearch = 2024-07-14 00:29:06
 
 [screenrant.com]
 match = 0.0%%
@@ -395,4 +395,9 @@ url = https://evergreenrecreation.com/224/Ice-Skating-Hockey
 match = -185.7%%
 title = Green Sweet Layered WAX APPLE Man Xanh Tam Hoa ...
 url = https://www.ebay.com/itm/395315782184
+
+[www.police1.com]
+match = 0.0%%
+title = 
+url = https://www.police1.com/chiefs-sheriffs/articles/incorporating-the-tenth-man-concept-into-critical-decision-making-TXuMkB74BZFN9LCo/
 
