--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-13 22:51:30
+lastsearch = 2024-07-14 00:34:31
 
 [www.reddit.com]
-match = 4.3%%
-title = Nemesis hits rank 2 Korea - 1726 lp
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+match = -30.4%%
+title = Riot is cutting back budget on esports?
+url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
 match = -58.3%%
