CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-13 23:47:07
+lastsearch = 2024-07-14 01:24:20
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -58,8 +58,8 @@ url = https://tuyensinh247.com/bai-tap-618536.html
 
 [www.thegioididong.com]
 match = -212.5%%
-title = Top 20 game online mobile (Android, iOS) hay nhất nên ...
-url = https://www.thegioididong.com/game-app/top-10-game-online-hay-nhat-tren-dien-thoai-android-ios-1312542
+title = Top điện thoại chơi game tốt, mượt nhất 2024 từ 4 đến 20 ...
+url = https://www.thegioididong.com/game-app/top-20-dien-thoai-choi-game-tot-nhat-2021-ban-nen-mua-1321221
 
 [vnexpress.net]
 match = -131.2%%
@@ -92,9 +92,9 @@ title = Chợ ma – dấu ấn nghề chiếu
 url = https://baotang.dongthap.gov.vn/di-san-van-hoa/cho-ma-dau-an-nghe-chieu-37.html
 
 [sv.ut.edu.vn]
-match = -75.0%%
-title = luật poker omaha-App Store5.93.517
-url = https://sv.ut.edu.vn/newsr4ru7ie5.html
+match = -125.0%%
+title = mega88 slot game–Apps on Google Play964.91.4
+url = https://sv.ut.edu.vn/newscowtl1.html
 
 [yamaha-motor.com.vn]
 match = -250.0%%
@@ -465,4 +465,9 @@ url = https://nld.com.vn/podcast/thong-tin-moi-nhat-vu-xe-khach-bi-vui-lap-khien
 match = -206.2%%
 title = Vụ xe 16 chỗ bị vùi lấp ở Hà Giang: Xác định danh tính 11 ...
 url = https://baophapluat.vn/vu-xe-16-cho-bi-vui-lap-o-ha-giang-xac-dinh-danh-tinh-11-nan-nhan-tu-vong-post518433.html
+
+[assembly.rajasthan.gov.in]
+match = -200.0%%
+title = https://assembly.rajasthan.gov.in/banca-betting-on...
+url = https://assembly.rajasthan.gov.in/banca-betting-on-sports-calculator-v-064/
 
