--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-14 00:35:54
+lastsearch = 2024-07-14 01:23:04
 
 [everon.online]
 match = -7.4%%
@@ -28,8 +28,8 @@ url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPC-21053
-url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
+title = Bộ Chăn ga gối Everon EPM-21067
+url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [everonhn.com.vn]
 match = 33.3%%
@@ -37,14 +37,14 @@ title = Bộ chăn ga Everon ESB -22020
 url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
-match = -18.5%%
-title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
-url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
+match = 15.8%%
+title = Bộ Everon Epm-21060
+url = https://everon.net.vn/everon/2109/bo-everon-epm-21060
 
 [sieuthidemhanquoc.com.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon ESM-21016
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-21016-1518
+title = Bộ chăn ga gối Everon EPM-21072
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21072-1532
 
 [shopee.vn]
 match = -44.4%%
