--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-13 19:47:42
+lastsearch = 2024-07-14 01:15:11
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = Chiếu trúc mắt nhỏ có viền màu đen 140x190cm
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-140x190cm-34.html
 
 [www.youtube.com]
-match = -138.1%%
-title = Huỳnh Thị Ngọc Huyền vs Dương Yến Vi - CK Nữ | GIẢI POOL ...
-url = https://www.youtube.com/watch?v=9zgQn-F5kBU
+match = -133.3%%
+title = Hoàng Thái Duy VS Lê Văn Quyền - VÒNG 16 | GIẢI POOL 9 ...
+url = https://www.youtube.com/watch?v=1a_P7eIaZ-4
 
 [chieutruc.info]
 match = -71.4%%
