--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-13 22:48:35
+lastsearch = 2024-07-14 01:18:31
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftleqPIsjb&sig=ACfU3U0-bgiap-abDj3aH0V1eD4LnF5Abg&hl=en&sa=X&ved=2ahUKEwi9oLnurqSHAxVHMVkFHampD2EQ6AF6BAguEAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fshR1exW9&sig=ACfU3U2dvJEotQAx3l1UM5-LEMCq1s8F4w&hl=en&sa=X&ved=2ahUKEwiR3vmv0KSHAxUKGDQIHcr8D7oQ6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
