--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-13 22:27:11
+lastsearch = 2024-07-14 01:23:57
 
 [www.amazon.com]
 match = -309.1%%
@@ -47,9 +47,9 @@ title = Bọc ghế da ô tô Xpander (da Thái) - RedCar.com
 url = https://redcar.com.vn/san-pham/boc-ghe-da-o-to-xpander-da-thai/
 
 [bocghedaoto.net]
-match = -109.1%%
-title = 50+ Mẫu Bọc Ghế Da Xe Camry Đẹp
-url = https://bocghedaoto.net/boc-ghe-da-xe-camry
+match = -181.8%%
+title = Bọc ghế da ô tô chất lượng cao Tại Nhà
+url = https://bocghedaoto.net/boc-ghe-da-oto-tai-nha
 
 [ghedagiago.com]
 match = -290.9%%
@@ -150,4 +150,9 @@ url = https://www.noithatxehoisaigon.com/san-pham/kem-duong-lam-mem-va-chong-tha
 match = -218.2%%
 title = BỌC GHẾ DA Ô TÔ 7 CHỖ XL7 - BẢNG GIÁ 2022
 url = https://dammedoxe.vn/boc-ghe-da-o-to-7-cho-xl7/
+
+[flexhouse.vn]
+match = 36.4%%
+title = Thảm phủ ghế sofa
+url = https://flexhouse.vn/tu-khoa-san-pham/tham-phu-ghe-sofa
 
