CI images update

--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-13 21:46:12
+lastsearch = 2024-07-14 01:33:17
 
 [tiki.vn]
 match = 16.0%%
@@ -32,9 +32,9 @@ title = Đài Loan nằm dọc theo Vành đai lửa Thái Bình Dương, trung 
 url = https://www.facebook.com/ptsvietnamesenews/videos/đài-loan-nằm-dọc-theo-vành-đai-lửa-thái-bình-dương-trung-bình-mỗi-năm-có-khoảng-/1955051404897312/
 
 [vi.wikipedia.org]
-match = -4.0%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 6.7%%
+title = Địa lý Đài Loan
+url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [www.roc-taiwan.org]
 match = -72.0%%
@@ -235,4 +235,9 @@ url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai
 match = -76.0%%
 title = Nộp đơn xin Visa Hoa Kỳ | Các Câu hỏi Thường gặp (FAQ)
 url = https://www.ustraveldocs.com/vn_vn/vn-gen-faq.asp
+
+[saigondoor.vn]
+match = -44.0%%
+title = Cửa nhựa Đài Loan YG-12 chính hãng giá tốt LH ...
+url = https://saigondoor.vn/cua-nhua-dai-loan-yg-12/
 
