--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-14 00:29:40
+lastsearch = 2024-07-14 01:32:54
 
 [www.instagram.com]
-match = -176.9%%
-title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
-url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
+match = -323.1%%
+title = Instagram video by Chan Dior Sunshade • Jun 2, 2024 at 8:35 ...
+url = https://www.instagram.com/reel/C7vRnd7gLPB/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -285,4 +285,9 @@ url = https://brightside.me/articles/the-story-of-a-kitchen-maid-that-became-the
 match = -92.3%%
 title = SPECTACULAR POST-COLONIAL CITIES
 url = https://core.ac.uk/download/pdf/56373292.pdf
+
+[www.universityoffashion.com]
+match = 0.0%%
+title = 
+url = https://www.universityoffashion.com/blog/dressed-to-inspire-a-tribute-to-fashion-muses/christian-diors-and-his-muse-mizza-bricard-photo-credit-milkx-tw/
 
