--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-13 16:52:33
+lastsearch = 2024-07-14 01:36:17
 
 [shopee.vn]
 match = -94.7%%
@@ -63,8 +63,8 @@ url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-
 
 [tiki.vn]
 match = -126.3%%
-title = Đồ chơi trẻ em thông minh hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=đồ chơi trẻ em thông minh
+title = Mua Đồ Chơi Trẻ Em HT SYS - Bộ Đồ Chơi Lắp Ghép Kỹ ...
+url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html
 
 [khodem.vn]
 match = 31.6%%
