--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-13 15:45:08
+lastsearch = 2024-07-14 01:38:30
 
 [demtot.com]
-match = 4.8%%
-title = Tag Archives: đệm lò xo
-url = https://demtot.com/tag/dem-lo-xo/
+match = -44.4%%
+title = Đệm Lò Xo
+url = https://demtot.com/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
