--- a/images/tui-warmdream-160x200x09/config.ini
+++ b/images/tui-warmdream-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-160x200x09.html
 lastopen = 2024-06-17 10:41:37
 
 [search]
-lastsearch = 2024-07-13 23:51:29
+lastsearch = 2024-07-14 01:35:37
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -62,12 +62,17 @@ title = Gloyale's Content - Page 241
 url = https://www.ultimatesubaru.org/forum/profile/17152-gloyale/content/page/241/?all_activity=1
 
 [www.wanderthewest.com]
-match = 4.3%%
-title = Insulated Thermal Pack?
-url = https://www.wanderthewest.com/threads/insulated-thermal-pack.22462/
+match = -116.7%%
+title = New thermal pack: quilted with lower window covers | Page 2
+url = https://www.wanderthewest.com/threads/new-thermal-pack-quilted-with-lower-window-covers.25099/page-2
 
 [www.amazon.com]
 match = -50.0%%
 title = Amazon.com: Customer Questions & Answers
 url = https://www.amazon.com/ask/questions/Tx1A2ZU0C5ULQJ7/?
+
+[ultralightandcomfortable.com]
+match = 0.0%%
+title = Tag: ultralight sleeping bag
+url = https://ultralightandcomfortable.com/tag/ultralight-sleeping-bag/
 
