CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-14 01:39:24
+lastsearch = 2024-07-14 02:24:38
 
 [en.wikipedia.org]
-match = -10.0%%
-title = Donghak Peasant Revolution
-url = https://en.wikipedia.org/wiki/Donghak_Peasant_Revolution
+match = 10.0%%
+title = Anti-Korean sentiment
+url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -142,9 +142,9 @@ title = Times of India: News - Latest News, Breaking News ...
 url = https://timesofindia.indiatimes.com/
 
 [www.riotgames.com]
-match = -145.0%%
-title = Riot's Korea Office and the Cultural Heritage Protection ...
-url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
+match = -125.0%%
+title = Seoul, Korea - Riot Games Global Offices & Job Openings
+url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [www.shadowsedge.com]
 match = -135.0%%
@@ -385,4 +385,9 @@ url = https://liquipedia.net/tft/Runeterra_Reforged/Championship
 match = -36.4%%
 title = lol_nemesis
 url = https://www.twitch.tv/lol_nemesis
+
+[www.walkingtopresence.com]
+match = -115.0%%
+title = The Rise of Korean Pilgrims on the Camino de Santiago
+url = https://www.walkingtopresence.com/articles/korean-edition-of-pilgrim-stories
 
