--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-14 01:51:24
+lastsearch = 2024-07-14 02:32:32
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Bộ ga chun chần bốn mùa 180x200 SH
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 
 [songhongonline.vn]
-match = 0.0%%
-title = Bộ sản phẩm SH_BC22 058
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-058
+match = 24.2%%
+title = Bộ chăn ga gối trẻ em SH_JC22 002
+url = https://songhongonline.vn/products/bo-chan-ga-goi-tre-em-sh-yc22-002
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 23.5%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH05
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh05
+match = 20.6%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH016
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh016
 
 [shopee.vn]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-22032 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est22032.html
+title = Everon EPM-22072 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22072.html
 
 [everonchinhhang.vn]
 match = 0.0%%
