--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-14 01:47:16
+lastsearch = 2024-07-14 02:26:13
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Chương trình phát triển tên lửa của Đài Loan
 url = https://nghiencuuchienluoc.org/chuong-trinh-phat-trien-ten-lua-cua-dai-loan-la-chan-phong-thu-truoc-tham-vong-cua-trung-quoc/
 
 [books.google.com]
-match = -116.0%%
-title = Địa chí Bắc Giang: địa lý và kinh tế - Page 406 - Google Books Result
-url = https://books.google.com/books?id=QIFuAAAAMAAJ&pg=PA406&lpg=PA406&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=7KDZx9_-qN&sig=ACfU3U2I1NFn0MXrHc5xv3Q08xsGM_CqOw&hl=en&sa=X&ved=2ahUKEwi1r5fOlpqHAxUxjYkEHUB1D0AQ6AF6BAgYEAM
+match = 12.0%%
+title = Ngự-ché̂ Việt-sử tó̂ng-vịnh
+url = https://books.google.com/books?id=tVIsxUmMpVMC&pg=PA219&lpg=PA219&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=wCC9UU7XPi&sig=ACfU3U19N2mqEQFgffRXb50OVjBk9ag7Gw&hl=en&sa=X&ved=2ahUKEwi6qtjA36SHAxViEFkFHc-bBG4Q6AF6BAgTEAM
 
 [cellphones.com.vn]
 match = -52.0%%
