--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-13 21:13:56
+lastsearch = 2024-07-14 02:52:18
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -42,9 +42,9 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = -200.0%%
-title = DAILY UPLOADS DAY 1 JFJFJFJF #music #fortnite #ukulele ...
-url = https://www.youtube.com/watch?v=SfhTqo-KgkQ
+match = -129.4%%
+title = #GOOD MORNING ASSAM WEDNESDAY#6.51#10/7/2024
+url = https://www.youtube.com/watch?v=Kq-yQSKJ5qA
 
 [www.tiktok.com]
 match = 20.0%%
