--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-14 02:33:16
+lastsearch = 2024-07-14 02:51:53
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -52,9 +52,9 @@ title = Điện thoại Xiaomi Redmi K60 5G (Snapdragon 8+ Gen 1
 url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k60.html
 
 [www.youtube.com]
-match = -242.9%%
-title = [Phim Việt Nam] TRÁI TIM MÀU XANH | Tập 16 | Phim Tâm Lý ...
-url = https://www.youtube.com/watch?v=3ybqAT8S9Pw
+match = -228.6%%
+title = [Review] TOP 16 Sữa tắm nước hoa bình dân HOT NHẤT ...
+url = https://www.youtube.com/watch?v=XsRwhD62NEA
 
 [www.gadgets360.com]
 match = 0.0%%
@@ -82,9 +82,9 @@ title = Miếng dán màn hình laptop chống tia UV, ánh sáng xanh ...
 url = https://shopee.vn/Miếng-dán-màn-hình-laptop-chống-tia-UV-ánh-sáng-xanh-bảo-vệ-mắt-(film-cao-cấp)-i.40381945.12466079786
 
 [www.dienmayxanh.com]
-match = -250.0%%
-title = Top 8 laptop màn hình cảm ứng chất lượng cao tốt nhất 2023
-url = https://www.dienmayxanh.com/kinh-nghiem-hay/top-5-laptop-co-man-hinh-cam-ung-gia-thap-den-cao-747636
+match = -242.9%%
+title = Màn hình máy tính PC uy tín chính hãng, giá rẻ | BH 3 năm
+url = https://www.dienmayxanh.com/man-hinh-may-tinh
 
 [thecoffeehouse.com]
 match = 28.6%%
@@ -305,4 +305,9 @@ url = https://www.biblegateway.com/passage/?search=Resansman 16,Nombres 16,Numbe
 match = -257.1%%
 title = An ninh Bến Tre Ký sự Bến Tre Xanh Thể thao bến treXem truyề
 url = https://www.bernzomatic.com/appTehRq6feFR
+
+[dienmaycholon.com]
+match = -192.9%%
+title = Xiaomi Redmi Note 11 (4+128GB) giá rẻ, giao ngay
+url = https://dienmaycholon.com/dien-thoai-di-dong/xiaomi-redmi-note-11-4128gb
 
