--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-07-13 21:19:20
+lastsearch = 2024-07-14 02:46:00
 
 [www.everonvn.vn]
-match = -22.6%%
-title = Bảng giá đệm bông ép Everon 1m8 (1.8m hay 180 x 200)
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m8.html
+match = -38.7%%
+title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [nemgiakho.com]
 match = 54.8%%
@@ -63,8 +63,8 @@ url = https://khonemtonghop.com/nem-bong-ep-gap-3-padding-everon/
 
 [thegioinem.com]
 match = 0.0%%
-title = Chăn Ga Gối Everon ESB23022
-url = https://thegioinem.com/chan-ga-goi-everon-esb23022.html
+title = Chăn Ga Gối Everon EPC23044
+url = https://thegioinem.com/chan-ga-goi-everon-epc23044.html
 
 [tongdailyeveron.com.vn]
 match = 0.0%%
