--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-14 01:22:53
+lastsearch = 2024-07-14 02:46:11
 
 [bilystore.vn]
-match = -95.2%%
-title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+match = -81.0%%
+title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
-match = -52.4%%
-title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường
+match = -95.2%%
+title = ( Hàng mới) Thảm giường tuyết Nhung dày dặn, mềm mịn ...
+url = https://shopee.vn/(-Hàng-mới)-Thảm-giường-tuyết-Nhung-dày-dặn-mềm-mịn-và-rất-ấm-nhiều-Kích-thước(-VIDEO-KÈM-ẢNH-THẬT)-i.3551312.7960781264
 
 [tiki.vn]
 match = -38.1%%
