CI images update

--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-14 02:32:18
+lastsearch = 2024-07-14 03:13:00
 
 [tiki.vn]
 match = 16.0%%
@@ -32,9 +32,9 @@ title = Đài Loan nằm dọc theo Vành đai lửa Thái Bình Dương, trung 
 url = https://www.facebook.com/ptsvietnamesenews/videos/đài-loan-nằm-dọc-theo-vành-đai-lửa-thái-bình-dương-trung-bình-mỗi-năm-có-khoảng-/1955051404897312/
 
 [vi.wikipedia.org]
-match = 6.7%%
-title = Địa lý Đài Loan
-url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
+match = -4.0%%
+title = Đài Loan – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
 match = -72.0%%
