--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-13 21:27:37
+lastsearch = 2024-07-14 03:13:57
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -27,9 +27,9 @@ title = Lê Mật Đài Loan Bên E Giao Khách l Đếm Không Hết Quả ...
 url = https://www.youtube.com/watch?v=jnvflW7R2LY
 
 [m.facebook.com]
-match = -7.1%%
-title = LÀNG ĂN THÔ - Fruitarian ( Raw Vegan )
-url = https://m.facebook.com/groups/langantho/posts/1353899318666407/
+match = 28.6%%
+title = Nội thất nhựa đài loan thành phong
+url = https://m.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/?locale=zh_TW
 
 [www.dkn.tv]
 match = -21.4%%
@@ -102,9 +102,9 @@ title = PHIẾU AN TOÀN HÓA CHẤT
 url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-104354&DocumentType=MSD&DocumentId=104354_SDS_VN_VI.PDF&DocumentUID=47184070&Language=VI&Country=VN&Origin=PDP
 
 [www.facebook.com]
-match = 11.1%%
-title = CỘNG ĐỒNG TIÊU DÙNG MỸ PHẨM
-url = https://www.facebook.com/groups/2045451282406040/?locale=vi_VN
+match = -35.7%%
+title = Nội thất nhựa đài loan thành phong | Ho Chi Minh City
+url = https://www.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/
 
 [www.favri.org.vn]
 match = -10.7%%
@@ -122,9 +122,9 @@ title = Clarithromycin - Bệnh viện Đại học Y Dược TPHCM
 url = https://bvdaihoccoso2.com.vn/vi/thong-tin-thuoc/clarithromycin.html
 
 [www.instagram.com]
-match = -21.4%%
-title = I love the monstera leaves at twightlight
-url = https://www.instagram.com/jungleful/p/C78JKk_xoRE/
+match = -177.8%%
+title = Instagram
+url = https://www.instagram.com/bacsicamthuy/reel/C8LgIVNvXTT/
 
 [tamanhhospital.vn]
 match = -50.0%%
@@ -215,4 +215,14 @@ url = https://thuvienphapluat.vn/van-ban/Bao-hiem/Circular-15-2016-TT-BYT-regula
 match = -35.7%%
 title = Bật mí 6 tuyệt chiêu tẩy tế bào chết đơn giản và an toàn
 url = https://www.medlatec.vn/tin-tuc/bat-mi-6-tuyet-chieu-tay-te-bao-chet-don-gian-va-an-toan-s195-n32118
+
+[shopcaygiong.vn]
+match = 26.9%%
+title = Cây Giống Táo Đại Siêu quả
+url = http://shopcaygiong.vn/san-pham/cay-giong-tao-dai
+
+[sieuthivitaminnhapkhau.vn]
+match = -32.1%%
+title = An Cung Hàn Quốc Vũ Hoàng Thanh Tâm KwangDong ...
+url = https://sieuthivitaminnhapkhau.vn/?n=10&id=415&/an-cung-han-quoc-vu-hoang-thanh-tam-kwangdong-hop-10-vien
 
