--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-14 01:31:36
+lastsearch = 2024-07-14 03:20:14
 
 [munghoangphat.com]
 match = 48.0%%
@@ -17,13 +17,13 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -44.0%%
-title = Màn chụp tự bung chống muỗi đỉnh rộng người lớn 1m2 x ...
-url = https://shopee.vn/search?keyword=Màn+chụp+tự+bung+chống+muỗi+đỉnh+rộng+người+lớn+1m2+x+2m,+1m6+x+2m,+1m8+x+2m,+2m2+x+2m+-+Loại+2+cửa
+match = -28.0%%
+title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp vuông
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
+match = 0.0%%
+title = 
 url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-vuong-1m6-x-2m.html
 
 [www.diepxuan.com]
