--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-14 02:24:38
+lastsearch = 2024-07-14 03:16:00
 
 [en.wikipedia.org]
-match = 10.0%%
-title = Anti-Korean sentiment
-url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -337,9 +337,9 @@ title = Ratios Cedears
 url = https://www.gabrielmartin.yt/tools/ratio
 
 [www.nti.org]
-match = -25.0%%
-title = North Korea Chemical Facilities
-url = https://www.nti.org/analysis/articles/north-korea-chemical-facilities/
+match = -15.0%%
+title = North Korea Chemical Overview
+url = https://www.nti.org/analysis/articles/north-korea-chemical/
 
 [10mag.com]
 match = 0.0%%
