--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-14 02:52:30
+lastsearch = 2024-07-14 03:18:00
 
 [shopee.vn]
 match = -216.7%%
@@ -12,9 +12,9 @@ title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ thảm trải ghế
 
 [goiaura.com]
-match = -8.3%%
-title = Đệm Trải Ghế Gỗ Mẫu 4
-url = https://goiaura.com/dem-trai-ghe-go-/dem-trai-ghe-go-mau-4
+match = -16.7%%
+title = Đệm Lót Ghế Gỗ Mẫu 5
+url = https://goiaura.com/dem-trai-ghe-go-/dem-lot-ghe-go-mau-5
 
 [h5.lazada.vn]
 match = -175.0%%
@@ -42,9 +42,9 @@ title = GHẾ NỆM DỰA CAO CẤP 4000-913
 url = https://thinhgo.com/products/ghe-nem-dua-cao-cap-4000-913
 
 [tiki.vn]
-match = -241.7%%
-title = Thảm ghế, nệm ghế gỗ kích thước 2m x 60cm các màu nâu
-url = https://tiki.vn/tham-ghe-nem-ghe-go-kich-thuoc-2m-x-60cm-cac-mau-nau-p89638136.html
+match = -200.0%%
+title = Nệm ghế,Thảm ghế gỗ loại 1m7x 55cm mẫu màu nâu
+url = https://tiki.vn/nem-ghe-tham-ghe-go-loai-1m7x-55cm-mau-mau-nau-p89638643.html?spid=141114686
 
 [suongtuyet.com]
 match = -125.0%%
@@ -72,8 +72,8 @@ title = Nệm lót ghế salon gỗ - nệm ngồi
 url = https://noithatktp.com/nem-lot-ngoi-simili-chong-tham-nuoc
 
 [unicostrading.com]
-match = -391.7%%
-title = Meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham ... - Unicos
+match = -358.3%%
+title = Meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham-trai ...
 url = https://unicostrading.com/meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham-trai-san1/
 
 [viethands.vn]
